test/corpus/fail/AST-60.mo
=========
AST-60.mo
=========

let test = ();
let test = ();

---

(source_file
  (let_dec
    (var_pat
      (identifier))
    (par_exp))
  (let_dec
    (var_pat
      (identifier))
    (par_exp)))
